# puddle

./: Cargo.toml  README.md  prek.toml
.github/workflows/: ci.yml  release.yml
crates/cli/: Cargo.toml
crates/cli/src/: app.rs  collections.rs  config.rs  raindrops.rs  tags.rs
lib/: error.rs  http.rs  lib.rs  pagination.rs
lib/endpoints/: mod.rs  raindrops.rs  tags.rs
lib/models/: collections.rs  common.rs  filters.rs  mod.rs  raindrops.rs  tags.rs
src/: app.rs  collections.rs  common.rs  config.rs  constants.rs  filters.rs  main.rs  previews.rs  raindrops.rs  tags.rs  user.rs
tests/: client_mocked.rs  live_smoke.rs  previews_snapshots.rs
tests/snapshots/: previews_snapshots__create_collection.snap  previews_snapshots__create_many_raindrops.snap  previews_snapshots__create_raindrop.snap  previews_snapshots__delete_collection.snap  previews_snapshots__delete_many_raindrops.snap  previews_snapshots__delete_raindrop.snap  previews_snapshots__delete_tag.snap  previews_snapshots__rename_tag.snap  previews_snapshots__update_collection.snap  previews_snapshots__update_many_raindrops.snap  previews_snapshots__update_raindrop.snap  previews_snapshots__upload_collection_cover.snap  previews_snapshots__upload_raindrop_cover.snap  previews_snapshots__upload_raindrop_file.snap
